edits and cname

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright © 2015 - Wagner Lab | The Wagner Lab is powered by <a href="http://getpelican.com/">Pelican</a>, <a href="http://python.org/">Python</a> and Nespresso</p>
+                    <p class="copyright text-muted">©2015 Wagner Lab | The Wagner Lab is powered by <a href="http://getpelican.com/">Pelican</a>, <a href="http://python.org/">Python</a> & Nespresso</p>
                 </div>
             </div>
         </div>
