--- a/publications.html
+++ b/publications.html
@@ -229,7 +229,7 @@ Cambridge, MA: MIT Press. </p>
 </li>
 <li>
 <p>Wagner, D.D., Heatherton, T.F. (2013) Emotion and Self-Regulation Failure.
-In Gross (Ed), * of Emotion Regulation (2nd edition)*. New York,
+In Gross (Ed), <em>Handbook of Emotion Regulation (2nd edition)</em>. New York,
 N.Y.: Guilford Press. <a href="https://dl.dropboxusercontent.com/u/1910916/wlab-pdf/2013%20-%20Emotion%20and%20Self-Regulation%20Failure%20-%20Wagner%2C%20Heatherton.pdf">[pdf]</a></p>
 </li>
 <li>
@@ -271,7 +271,7 @@ Washington, DC: The National Academies Press, pp. 217–238. <a href="https://dl
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright © 2015 - Wagner Lab | The Wagner Lab is powered by <a href="http://getpelican.com/">Pelican</a>, <a href="http://python.org/">Python</a> and Nespresso</p>
+                    <p class="copyright text-muted">©2015 Wagner Lab | The Wagner Lab is powered by <a href="http://getpelican.com/">Pelican</a>, <a href="http://python.org/">Python</a> & Nespresso</p>
                 </div>
             </div>
         </div>
