--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@ wagner.1174@osu.edu  </p>
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright © 2015 - Wagner Lab | The Wagner Lab is powered by <a href="http://getpelican.com/">Pelican</a>, <a href="http://python.org/">Python</a> and Nespresso</p>
+                    <p class="copyright text-muted">©2015 Wagner Lab | The Wagner Lab is powered by <a href="http://getpelican.com/">Pelican</a>, <a href="http://python.org/">Python</a> & Nespresso</p>
                 </div>
             </div>
         </div>
