added Allison photo

--- a/lab_members.html
+++ b/lab_members.html
@@ -103,7 +103,8 @@
 <p><strong>Jonathan Stahl</strong><br />
 <a href="mailto:stahl.191@buckeyemail.osu.edu">email</a></p>
 <h3>Lab Manager</h3>
-<p><strong>Allison Londerée</strong><br />
+<p><img width="135" style="float: left; margin:0 10px 10px 0" src="images/people_aml.jpg">
+<strong>Allison Londerée</strong><br />
 <a href="mailto:londeree.4@buckeyemail.osu.edu">email</a></p>
 <p>Allison Londerée graduated with B.S. in Neuroscience with a minor in Integrative Approaches to Health and Wellness in 2015. She worked with Ruchika Prakash on her undergraduate thesis. Broadly, she seeks to analyze the impact of different lifestyle choices and perceptions on cognitive functioning using both behavioral and neuroimaging (fMRI) methods in healthy individuals and clinical populations.</p>
 <p>Other than working in lab, Allison enjoys playing board games, hiking, and exploring vegetarian cuisine!</p>
